# mlops-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/mlops_mcp/: __init__.py  server.py
src/mlops_mcp/resources/: __init__.py  schemas.py
src/mlops_mcp/tools/: __init__.py  mlflow_tools.py
src/mlops_mcp/utils/: __init__.py  auth.py  errors.py
tests/: __init__.py  test_mlflow.py
