[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlops-mcp-server"
version = "0.1.0"
description = "MCP server for MLOps workflows - experiment tracking, model registry, and deployment across MLflow, W&B, and SageMaker"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Jeru", email = "jeru@gnamerio.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "mlops",
    "mlflow",
    "wandb",
    "sagemaker",
    "machine-learning",
    "ai",
    "claude"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "mlflow>=2.10",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
wandb = ["wandb>=0.16"]
aws = ["boto3>=1.34"]
all = [
    "wandb>=0.16",
    "boto3>=1.34",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.3.0",
    "mypy>=1.8",
]

[project.urls]
Homepage = "https://github.com/elliottdevo8/mlops-mcp-server"
Documentation = "https://github.com/elliottdevo8/mlops-mcp-server#readme"
Repository = "https://github.com/elliottdevo8/mlops-mcp-server"
Issues = "https://github.com/elliottdevo8/mlops-mcp-server/issues"

[project.scripts]
mlops-mcp-server = "mlops_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
